--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,19 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@()(implicit messages: Messages)
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
+@main() {
 
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @play20.welcome(message, style = "Scala")
+   <div>
+
+      <ul>
+
+         <li><a href="@routes.GameController.newGame"
+             class="btn">@Messages("front.game.new")</a></li>
+
+         <li><a href="@routes.GameController.continueGame"
+             class="btn">@Messages("front.game.continue")</a></li>
+
+      </ul>
+
+   </div>
 
 }
