--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,23 +1,35 @@
-@*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
-@(title: String)(content: Html)
+@(title: Option[String] = None)(content: Html)(implicit messages: Messages)
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
+        <title>@Messages("application.title") @title.getOrElse("")</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        @*
+          <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+          <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        *@
     </head>
     <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-        @content
+      <div class="nautical-structure" id="nautical-ocean">
+         <div class="nautical-structure" id="nautical-ship">
+            <div class="nautical-structure" id="nautical-hull">
+
+               <div class="nautical-component" id="nautical-bow">
+
+                  <h1>Cargo</h1>
+
+               </div>
+
+               <div class="nautical-structure" id="nautical-keel">
+                  <div class="nautical-component" id="nautical-cargo">
+
+                     @content
+
+                  </div>
+               </div>
+             </div>
+          </div>
+       </div>
     </body>
 </html>
