--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,10 +1,11 @@
-@(title: Option[String] = None)(content: Html)(implicit messages: Messages)
+@(title: Option[String] = None)(content: Html)(implicit webJarAssets: WebJarAssets, messages: Messages)
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>@Messages("application.title") @title.getOrElse("")</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.css"))"/>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")"/>
         @*
           <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
           <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
