Moved web module into subfolder. Added root project markdown files

--- a/cargo-web/app/views/game/mainPage.scala.html
+++ b/cargo-web/app/views/game/mainPage.scala.html
@@ -1,4 +1,4 @@
-@(name: String = "player")(implicit webJarAssets: WebJarAssets, messages: Messages)
+@(name: String = "player")(implicit messages: Messages)
 
 @import helper._
 
@@ -6,7 +6,7 @@
 
    <div class="">
       <p>
-         
+         @Messages("game.main.placeholder")
       </p>
    </div>
 
