--- a/cargo-web/app/views/main.scala.html
+++ b/cargo-web/app/views/main.scala.html
@@ -1,15 +1,15 @@
-@(title: Option[String] = None)(content: Html)(implicit webJarAssets: WebJarAssets, messages: Messages)
+@(title: Option[String] = None)(content: Html)(implicit messages: Messages)
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>@Messages("application.title") @title.getOrElse("")</title>
-        <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.css"))"/>
+        <link rel="stylesheet" media="screen" href="/assets/lib/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")"/>
-        @*
+        @**
           <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
           <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-        *@
+        **@
     </head>
     <body>
       <div class="nautical-structure" id="nautical-ocean">
@@ -17,9 +17,9 @@
             <div class="nautical-structure" id="nautical-hull">
 
                <div class="nautical-component" id="nautical-bow">
-
-                  <h1>Cargo</h1>
-
+                  <header>
+                     <h1>Cargo</h1>
+                  </header>
                </div>
 
                <div class="nautical-structure" id="nautical-keel">
@@ -30,6 +30,11 @@
                   </div>
                </div>
              </div>
+          </div>
+          <div class="nautical-structure" id="nautical-buoy">
+             <footer>
+               <!-- Can you bear seeing a totally bare bear with a beard drinking beer?          -->
+             </footer>
           </div>
        </div>
     </body>
