Basic styling. First flow of accepting first job, bank loan and buying a truck.

--- a/cargo-web/app/views/game/newGame.scala.html
+++ b/cargo-web/app/views/game/newGame.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@main() {
+@templates.nauticalBulkhead() {
 
    <div class="game-form">
       @form(action=routes.GameController.submitNewGameDetails){
