--- a/cargo-web/app/views/game/welcomePage.scala.html
+++ b/cargo-web/app/views/game/welcomePage.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@main() {
+@templates.nauticalBulkhead() {
 
    <div class="">
       <p>
@@ -11,7 +11,7 @@
    </div>
 
    <div class="">
-      <a class="btn" href="@routes.GameController.mainPage">@Messages("game.welcome.page.start")</a>
+      <a class="btn" href="@routes.GameController.startGame">@Messages("game.welcome.page.start")</a>
    </div>
 
 
