Static tutorial flow finished

--- a/cargo-web/app/views/game/gameStarboard.scala.html
+++ b/cargo-web/app/views/game/gameStarboard.scala.html
@@ -19,11 +19,18 @@
    </li>
    <li>
       <div class="deck-header">
+         Bank loans:
+      </div>
+      <div class="deck-data">
+         €-98,784
+      </div>
+   </li>
+   <li>
+      <div class="deck-header">
          Date:
       </div>
       <div class="deck-data">
-         1985
-         August
+         1985 August
          <br />
          Week 1
       </div>
