--- a/cargo-web/app/views/game/newGame.scala.html
+++ b/cargo-web/app/views/game/newGame.scala.html
@@ -22,7 +22,7 @@
             <input type="text" name="companyname" value="Trucks R'Us" required />
          </div>
 
-         <div class="">
+         @* <div class="">
             @messagesProvider.messages("game.new.company.location")
          </div>
          <div class="">
@@ -34,10 +34,10 @@
                   </label>
                </div>
             }
-         </div>
+         </div> *@
 
          <div class="">
-            <button type="submit" name="button">@messagesProvider.messages("game.new.start")</button>
+            <button type="submit" name="button" class="btn btn-success">@messagesProvider.messages("game.new.start")</button>
          </div>
       }
 
