--- a/cargo-web/app/views/templates/nauticalGameBulkhead.scala.html
+++ b/cargo-web/app/views/templates/nauticalGameBulkhead.scala.html
@@ -1,4 +1,4 @@
-@(title: Option[String] = None)(jib: Html)(cargo: Html)(bridge: Html)(implicit messages: Messages)
+@(title: Option[String] = None)(jib: Html)(cargo: Html)(bridge: Html)(implicit messages: Messages, gameContext: GameContext)
 
 @nauticalShip(title){
    <div class="nautical-compartment" id="nautical-jib">
