--- a/cargo-web/app/views/game/tutorial/firstGarageDetails.scala.html
+++ b/cargo-web/app/views/game/tutorial/firstGarageDetails.scala.html
@@ -1,4 +1,4 @@
-@(name: String = "player")(implicit request: RequestHeader, messages: Messages)
+@(name: String = "player")(implicit request: RequestHeader, messages: Messages, gameContext: GameContext)
 
 @import helper._
 
