--- a/cargo-web/app/views/templates/nauticalBulkhead.scala.html
+++ b/cargo-web/app/views/templates/nauticalBulkhead.scala.html
@@ -1,4 +1,4 @@
-@(title: Option[String] = None)(cargo: Html)(implicit messages: Messages)
+@(title: Option[String] = None)(cargo: Html)(implicit messages: Messages, gameContext: GameContext)
 
 @nauticalShip(title){
    <div class="nautical-structure" id="nautical-bulkhead">
