--- a/cargo-web/app/views/game/tutorial/firstJobDetails.scala.html
+++ b/cargo-web/app/views/game/tutorial/firstJobDetails.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@templates.nauticalGameBulkhead(Some("First job")) {
+@templates.gameKeel(Some("First job")) {
 
    <h3>
       @Messages("game.tutorial.firstjob.details.header")
