--- a/cargo-web/app/views/game/tutorial/firstTruckDetails.scala.html
+++ b/cargo-web/app/views/game/tutorial/firstTruckDetails.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@templates.nauticalGameBulkhead(Some("First truck details")) {
+@templates.gameKeel(Some("First truck details")) {
 
    <h3>
       @Messages("game.tutorial.firsttruck.details.header")
