--- a/cargo-web/app/views/game/tutorial/startJob.scala.html
+++ b/cargo-web/app/views/game/tutorial/startJob.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@templates.nauticalGameBulkhead() {
+@templates.gameKeel() {
 
    <h3>
       @Messages("game.tutorial.job.start.header")
